add verification on hours available when updating a trabajador and minor document builder change